--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -8,13 +8,15 @@ $base_font_family   : 'Montserrat' , sans-serif;
 $space              : $base_line_height;
 
 $actionbar_height   : 72px;
+$bottomnav_height   : 72px;
 
 // Colors
 // ------------------------------------------------------------------------ //
 
 $color_main         : #CBA26C;
 $color_dark         : #B48B55;
-$color_muted         : #9C9C9C;
+$color_muted        : #9C9C9C;
+
 
 $white              : #fff;
 $black              : #222;
