--- a/dev/sass/modules/_buttons.scss
+++ b/dev/sass/modules/_buttons.scss
@@ -51,3 +51,52 @@ $BTN_PADDING: ($space / 3) $space;
 .btn--block {
     width: 100%;
 }
+
+.btn--dismiss {
+    background: transparent;
+    height: 100%;
+    padding: 0 $space / 2;
+    color: $color_main;
+}
+
+.btn--float {
+    position: fixed;
+    right: $space / 2;
+    bottom: $space * 4;
+    z-index: 7;
+    background: $color_dark;
+    width: 56px;
+    height: 56px;
+    padding: ($space / 3) 0;
+    border-radius: 100px;
+    color: $white;
+    text-align: center;
+}
+
+.btn--photo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    border-radius: 100px;
+    background: $color_main;
+    color: $white;
+}
+
+.btn--back {
+    background: transparent;
+    color: $white;
+    position: fixed;
+    z-index: 15;
+    top: 0;
+    left: 0;
+    line-height: $actionbar_height *1.2;
+    padding: 0 $space;
+
+    &:hover,
+    &:focus {
+        color: $white;
+    }
+}
