--- a/dev/sass/modules/_forms.scss
+++ b/dev/sass/modules/_forms.scss
@@ -41,7 +41,8 @@ input[type="number"] {
 
 .form-label {
     display: block;
-    margin-top: ($space / 3);
+    font-size: $base_font_size * 0.8;
+    //margin-top: ($space / 3);
 }
 
 .form-input {
@@ -92,4 +93,54 @@ input[type="number"] {
 
 .form-input--block {
     width: 100%;
+}
+
+.form-group {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: ($space / 2) 0;
+    border-bottom: solid 1px #f0f0f0;
+    
+    &:last-child {
+        border-bottom: none;
+    }
+}
+
+.form-option {
+    width: 70px;
+    height: 100%;
+
+    .btn {
+        display: block;
+        height: 100%;
+        color: $color_main;
+        float: right;
+    }
+}
+
+.form-trans {
+    background: transparent;
+    border: none;
+    box-shadow: none;
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.form-group-photo {
+    display: table;
+    position: relative;
+    z-index: 5;
+    text-align: center;
+    color: $white;
+    margin: 0 auto;
+}
+
+.form-photo {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    object-fit: cover;
 }
