--- a/dev/sass/modules/_modules.scss
+++ b/dev/sass/modules/_modules.scss
@@ -15,3 +15,8 @@
 @import "headline";
 @import "bottom-nav";
 @import "card-grid";
+@import "anim";
+@import "card-list";
+@import "card-slider";
+@import "tab";
+@import "modal";
