--- a/dev/sass/partial/_resets.scss
+++ b/dev/sass/partial/_resets.scss
@@ -109,4 +109,5 @@ input[type="search"] {
 
 a {
     -webkit-tap-highlight-color: rgba(0,0,0,0.03);
+    //-webkit-tap-highlight-color: transparent;
 }
