--- a/www/fragments/info-harga.html
+++ b/www/fragments/info-harga.html
@@ -1,1 +1,13 @@
-<h3>Info Harga</h3>
+<div>
+  <ul class="list list-nostyle">
+    <li class="list-item" ng-repeat="harga in [1,2,3,4,5]">
+      <a class="list-anchor">
+        <div class="list-thumb list-thumb--squared"></div>
+        <div class="list-content">
+          <p class="block-none">Telur Ayam</p>
+          <h3 class="block-none">Rp 19.000/kg</h3>
+        </div>
+      </a>
+    </li>
+  </ul>
+</div>
