--- a/dev/sass/modules/_modal.scss
+++ b/dev/sass/modules/_modal.scss
@@ -3,29 +3,40 @@
   top: 0;
   left: 0;
   z-index: 10;
-  width: 96%;
-  height: 87%;
+  width: 100%;
+  height: 100%;
   background: $white;
-  padding: $space;
-  transform: translate(2%, 100vh);
+  transform: translateX(100vh);
   transition: all .3s ease;
-  border-radius: $space / 3;
   will-change: true;
   
   &.is-active {
-    transform: translate(2%, 2%);
+    transform: translateX(0);
   }
 }
 
 .modal-header {
+  background: $color_main;
   border-bottom: solid 1px #f0f0f0;
-  padding-bottom: $space / 2;
-  margin-bottom: $space / 2;
+  padding: $space;
+  max-height: $space * 3.5;
 }
 
+
 .modal-dismiss {
+  position: absolute;
   background: transparent;
   padding: 0;
-  color: $color_main;
+  color: $white;
   font-weight: 700;
+  font-size: $base_font_size * 2;
+  line-height: 1;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  width: 100%;
+  color: $white;
+  font-weight: 300;
+  text-align: center;
 }
