--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -16,6 +16,7 @@ $bottomnav_height   : 72px;
 $color_main         : #CBA26C;
 $color_dark         : #B48B55;
 $color_muted        : #9C9C9C;
+$color_grey         : #F0F0F0;
 
 
 $white              : #fff;
@@ -50,6 +51,7 @@ $medium_portrait    : "screen and (min-width: 48em) and (orientation: portrait)"
 $medium_landscape   : "screen and (min-width: 48em) and (orientation: landscape)";
 
 $large              : "screen and (min-width: 64em)";
+$large_mobile       : "screen and (min-width: 361px)";
 
 $retina             : "(-webkit-min-device-pixel-ratio: 1.3), (min-resolution: 1.25dppx), (min-resolution: 120dpi)";
 
