--- a/www/fragments/toko.html
+++ b/www/fragments/toko.html
@@ -1,1 +1,16 @@
-<h3>Toko</h3>
+<div>
+  <ul class="list list-nostyle">
+    <li class="list-item" ng-repeat="harga in [1,2,3,4,5]">
+      <a class="list-anchor">
+        <div class="list-thumb list-thumb--squared"></div>
+        <div class="list-content">
+          <p class="block-none">Telur Ayam</p>
+          <h3 class="block-none">Rp 19.000/kg</h3>
+        </div>
+        <div class="list-action">
+          <button class="btn">Beli</button>
+        </div>
+      </a>
+    </li>
+  </ul>
+</div>
